# rust-optee

./: Cargo.toml  README.md  init_rust_tee.sh
aes-cbc-mac-nopad/: Makefile  uuid.txt
aes-cbc-mac-nopad/host/: Cargo.toml  Makefile
aes-cbc-mac-nopad/host/src/: format.rs  main.rs
aes-cbc-mac-nopad/ta/: Makefile
aes-cbc-mac-nopad/ta/src/: main.rs
aes-cbc-mac-pkcs5/: uuid.txt
aes-cbc-mac-pkcs5/host/: Makefile
aes-cbc-mac-pkcs5/pk/: public_key_20250205_164300.pem  public_key_20250207_144136.pem
aes-cbc-mac-pkcs5/proto/src/: lib.rs
aes-cbc-mac-pkcs5/ta/: Cargo.toml  build.rs
aes-cbc-mac-pkcs5/ta/src/: main.rs
hotp-rs/: uuid.txt
hotp-rs/host/: Cargo.toml  Makefile
hotp-rs/proto/: Cargo.toml  build.rs
hotp-rs/proto/src/: lib.rs
hotp-rs/ta/src/: main.rs
p256/: Cargo.toml
p256/host/: Cargo.toml  Makefile
p256/host/src/: format.rs  main.rs
p256/pk/: public_key_20250121_113713.pem  public_key_20250206_151947.pem  public_key_20250206_152037.pem  public_key_20250206_162935.pem
p256/proto/src/: lib.rs
p256/ta/: Cargo.toml
p256/ta/src/: main.rs  storage.rs
